--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,14 @@
 <resources>
     <string name="app_name">SMD_ASSIGNMENT_03_19L0995</string>
+    <string name="restaurants_hi_restaurants">RESTAURANTS HI RESTAURANTS</string>
+    <string name="rp_1_000_000">Rp 1.000.000</string>
+    <string name="_30_maret_2021">30-Maret-2021</string>
+    <string name="belanja">Belanja</string>
+    <string-array name="programming_languages">
+        <item>Kotlin</item>
+    </string-array>
+
+    <string-array name="description">
+        <item>This is a random description</item>
+    </string-array>
 </resources>
