--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">SMD_ASSIGNMENT_03_19L0995</string>
+    <string name="app_name">RESTAURANTS HI RESTAURANTS</string>
     <string name="restaurants_hi_restaurants">RESTAURANTS HI RESTAURANTS</string>
     <string name="rp_1_000_000">Rp 1.000.000</string>
     <string name="_30_maret_2021">30-Maret-2021</string>
